[package]
name = "ig-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
cookie = "0.16.2"
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = { version = "1.0.151", features = ["rc"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
