[package]
name = "ig-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
bytes = "1.3.0"
cookie = "0.16.2"
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = { version = "1.0.151", features = ["rc"] }
serde_json = "1.0"
serde_qs = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.4"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
webpki-roots = "0.22.6"
