[package]
name = "ig-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
bytes = { version = "1.3.0", optional = true }
cookie = "0.16.2"
md5 = "0.7.0"
miniz_oxide = { version = "0.7.1", optional = true }
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = { version = "1.0.151", features = ["rc"] }
serde_json = "1.0"
serde_qs = "0.10"
thrift = { version = "0.17.0", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23.4", optional = true }
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
webpki-roots = { version = "0.22.6", optional = true }

[features]
realtime = ["bytes", "miniz_oxide", "thrift", "tokio-rustls", "webpki-roots"]
